<resources>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weibosdk_demo_share_to">分享</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="app_name">局气</string>
    <string name="image_description">imageView</string>
    <string name="host_description">球局组织者</string>
    <string name="zuju">组局成就</string>
    <string name="canju">参局成就</string>
    <string name="changguan">场        馆</string>
    <string name="dizhi">地        址</string>
    <string name="guimo">球局规模</string>
    <string name="shijian">球局时间</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="feiyong">报名费用</string>
    <string name="xiangqing">详细信息</string>
    <string name="tocomment">我要评论</string>
    <string name="toattend">我要报名</string>
    <string name="attendlist_hint">还没有人参与</string>
    <string name="commentlist_hint">还没有人评论</string>
    <string name="payment_setting">选择支付方式</string>
    <string name="signString">报名</string>
    <string name="manageString">管理</string>
    <string name="appointString">约球</string>
    <string name="achieveString">成就</string>
    <string name="myString">我的</string>
    <string name="detail_match">球局详情</string>
    <string name="gym_name">场馆名称</string>
    <string name="detail_place">详细地址</string>
    <string name="contact_people">联系人</string>
    <string name="attend_txt">+报名球局</string>
    <string name="attend_confirm">确认报名</string>
    <string name="comment_txt">评论</string>
    <string name="check_attend">我已阅读<a href="http://www.baidu.com/">《局器APP支付协议》</a>，并确认活动真实性，同意支付报名费</string>
    <string name="comments_send">发送</string>
    <string name="comments_hint">评论:</string>
    <string name="comments_list">评论列表</string>
    <string name="today">今天</string>
    <string name="tommorrow">明天</string>
    <string name="jinyizhou">近一周</string>
    <string name="nomatter">不限</string>
    <string name="chooses">筛选</string>
    <string name="canyu_ac">参与成就</string>
    <string name="zuzhi_ac">组织成就</string>
    <string name="wode_ac">我的成就</string>
    <string name="paiming">排名</string>
    <string name="yonghuming">用户名</string>
    <string name="chengjiu">参与成就</string>
    <string name="manage_match">管理球局</string>
    <string name="manage_attend">查看报名</string>
    <string name="attend_manage">报名管理</string>
    <string name="not_release1">您还未发布过球局</string>
    <string name="not_release2">快来发布吧</string>
    <string name="not_join1">您还未参与过球局</string>
    <string name="not_join2">快去参加吧</string>
    <string name="not_attend">还没有人参与~</string>
    <string name="not_friend1">您还没有朋友</string>
    <string name="not_friend2">快去交朋友吧</string>
    <string name="pay_case">支付情况</string>
    <string name="attend_case">报名情况</string>
    <string name="manage_fee">免费</string>
    <string name="manage_state">20/30</string>
    <string name="phone_number">手机:</string>
    <string name="change_match">修改球局</string>
    <string name="cancel_match">删除球局</string>
    <string name="manage_inspect">球局验票</string>
    <string name="share_match">分享球局</string>
    <string name="another_match">再发一个</string>
    <string name="cost_unit">金额(元)</string>
    <string name="ok">确定</string>
    <string name="welcomeok">立即体验</string>
    <string name="cancel">取消</string>
    <string name="share_to">分享到</string>
    <string name="share_py">朋友圈</string>
    <string name="share_wx">微信好友</string>
    <string name="share_wb">新浪微博</string>
    <string name="share_html">复制链接</string>
    <string name="cancel_tips">您确认要删除该球局？</string>
    <string name="quit_tips1">您确定要退出吗？</string>
    <string name="quit_tips2">球局开始前三小时会有惩罚哦~</string>
    <string name="inspect_success">验票成功</string>
    <string name="inspect_failed">验票失败</string>
    <string name="inspect_continue">继续验票</string>
    <string name="confirm_change">确认修改</string>
    <string name="launch_match">发起球局</string>
    <string name="appoint_title">球局标题</string>
    <string name="appoint_start">开始时间</string>
    <string name="appoint_time">球局时长</string>
    <string name="appoint_end">报名截止</string>
    <string name="appoint_place">所在场馆</string>
    <string name="appoint_format">场地规格</string>
    <string name="appoint_number">球局人数</string>
    <string name="appoint_hint_number">请输入球局总人数</string>
    <string name="appoint_hint_place">请输入场馆名称</string>
    <string name="appoint_hint_fee">请输入球局费用</string>
    <string name="appoint_type">球局类型</string>
    <string name="appoint_detail">球局详情</string>
    <string name="appoint_phone">手机号码</string>
    <string name="appoint_cost">活动费用    </string>
    <string name="appoint_confirm">确认发布</string>
    <string name="back_txt">返回</string>
    <string name="num_show">不包括发起人</string>
    <string name="personal_welcome">欢迎</string>
    <string name="personal_login">登录</string>
    <string name="another_login">其他方式登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="hit_account">请输入手机号</string>
    <string name="hit_pwd">请输入您的密码</string>
    <string name="hit_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="register_code">验  证  码</string>
    <string name="check_pwd_txt">我已阅读并同意《局器APP用户协议》</string>
    <string name="my_information">我的信息</string>
    <string name="match_certificate">球局凭证</string>
    <string name="my_friend">我的局友</string>
    <string name="attend_achievement">参与成就:？</string>
    <string name="org_achievement">组织成就:？</string>
    <string name="follow">关注球友:？</string>
    <string name="my_message">我的消息</string>
    <string name="my_bill">我的账单</string>
    <string name="bill_overview">账单总览</string>
    <string name="bill_detail">账单明细</string>
    <string name="withdraw_detail">提现明细</string>
    <string name="my_settings">设置</string>
    <string name="settings">系统设置</string>
    <string name="personal_quit">退出</string>
    <string name="detail_information">个人信息</string>
    <string name="detail_avatar">头像</string>
    <string name="detail_name">姓名</string>
    <string name="detail_age">年龄</string>
    <string name="detail_game_age">球龄</string>
    <string name="game_age_unit">年</string>
    <string name="detail_height">身高</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="detail_weight">体重</string>
    <string name="detail_gender">性别</string>
    <string name="gender_hint">男</string>
    <string name="detail_level">实战水平</string>
    <string name="detail_role">场上位置</string>
    <string name="detail_offense">进攻技能</string>
    <string name="detail_defense">防守技能</string>
    <string name="detail_zonghe">综合技能</string>
    <string name="skill_unit">%</string>
    <string name="gexing_hint">请输入个性签名</string>
    <string name="male">♂</string>
    <string name="female">♀</string>
    <string name="info_confirm">完成</string>
    <string name="state_massage">个性签名</string>
    <string name="my_state">个性签名:</string>
    <string name="military_exploits">战绩说明</string>
    <string name="zhanji_hint">请输入战绩说明</string>
    <string name="authentication_text">身份认证</string>
    <string name="system_settings">系统设置</string>
    <string name="string_about">关于我们</string>
    <string name="string_help">帮助中心</string>
    <string name="message_push">消息推送</string>
    <string name="about_us">关于我们</string>
    <string name="help_center">帮助中心</string>
    <string name="password_change">密码修改</string>
    <string name="logout_txt">退出登录</string>
    <string name="my_withdraw">我要提现</string>
    <string name="my_balance">账户余额</string>
    <string name="my_income">累计收入</string>
    <string name="witndraw_money">提现金额</string>
    <string name="hint_withdraw">请输入提现金额</string>
    <string name="cash_unit">¥</string>
    <string name="my_identity">身份认证</string>
    <string name="realname">真实姓名</string>
    <string name="auth_warning1">请填写本人真实信息并仔细核实，避免给您带来损失</string>
    <string name="auth_warning2">说明：</string>
    <string name="auth_warning3">1、证件照片要求清晰可见，才能通过审核；</string>
    <string name="auth_warning4">2、证件照片只用于认证身份，不会用于其他用途；</string>
    <string name="id_card1">身份证正面</string>
    <string name="id_card2">身份证背面</string>
    <string name="auth_confirm">确认提交</string>
    <string name="qr">查看二维码</string>
    <string name="qrclose">关闭</string>
    <string name="qrhint">扫描二维码，确认参与球局</string>
    <string name="cer_match">查看球局</string>
    <string name="change_pwd">修改密码</string>
    <string name="account_setting">设置收款账户</string>
    <string name="setaccount">收款账户</string>
    <string name="account_hint">请输入您的收款账户</string>
    <string name="old_pwd">原  密  码</string>
    <string name="new_pwd">新  密  码</string>
    <string name="confirm_new_pwd">确认密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="old_hint">请输入您的旧密码</string>
    <string name="new_hint">请输入您的新密码</string>
    <string name="con_new_hint">请再次输入您的新密码</string>
    <string name="con_cpwd_btn">提交</string>
    <string name="validate_phone">验证手机</string>
    <string name="message_comment">球局评论</string>
    <string name="message_system">系统消息</string>
    <string name="message_activity">活动提醒</string>
    <string name="message_official">官方通知</string>
    <string name="login_pass">密        码</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="hint1">输入球局标题</string>
    <string name="hint2">2</string>
    <string name="hint3">小时</string>
    <string name="hint4">半场</string>
    <string name="hint5">30</string>
    <string name="hint6">公共球局</string>
    <string name="hint7">13912341234</string>
    <string name="hint8">球局详情输入</string>
    <string name="hint9">昵称</string>
    <string name="hint10">可提现余额:1000元</string>
    <string name="hint11">付费</string>
    <string name="hint12">元</string>
    <string name="hint13">24小时内到账</string>
    <string name="hint14">支付宝账户</string>
    <string name="hint15">初级菜鸟</string>
    <string name="hint16">C</string>
    <string name="hint17">无</string>
    <string name="hint18">？</string>
    <string name="hint19">实战水平:</string>
    <string name="hint20">参与成就:</string>
    <string name="hint21">组织成就:</string>
    <string name="hint22">位置:</string>
    <string name="hint23">年龄:</string>
    <string name="hint24">ta发起的球局</string>
    <string name="hint25">未认证</string>
    <string name="hint26">快来参加</string>
    <string name="hint27">+加关注</string>
    <string name="hint28">随便看看</string>
    <string name="hint29">费用:</string>
    <string name="hint30">手机</string>
    <string name="hint31">篮球场</string>
    <string name="hint32">姓名:张三</string>
    <string name="hint33">手机:18811441231</string>
    <string name="hint34">报名时间:2016–05–20 20:00</string>
    <string name="hint35">微信账户</string>
    <string name="hitn36">请输入您的手机号码</string>
    <string name="hint_keyword">请输入搜索关键字</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="search">搜索</string>
    <string name="move">出发</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载………</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_account">SetAccountActivity</string>
    <string name="searchfriends">添加局友</string>
    <string name="cancelfriend">确定要取消关注该好友吗？</string>
</resources>