<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/tips_box"
        android:contentDescription="@string/image_description"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/quit_tips1"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/small_medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quit_tips2"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/small_medium_text_size" />

        <Button
            android:id="@+id/quit_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/tips_button"
            android:contentDescription="@string/image_description"
            android:text="@string/ok"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/medium_text_size" />

        <Button
            android:id="@+id/quit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/tips_button"
            android:contentDescription="@string/image_description"
            android:text="@string/cancel"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

</RelativeLayout>