<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="cn.com.sfn.juqi.my.ChangePasswordActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#66000000" >

        <TextView
            android:id="@+id/back_to_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/back_to_pre"
            android:text="@string/back_txt"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_pwd"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/login_edit"
            android:hint="@string/old_hint"
            android:inputType="textPassword"
            android:textColor="@color/password"
            android:textColorHint="@color/pophint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/login_edit"
            android:hint="@string/new_hint"
            android:inputType="textPassword"
            android:textColor="@color/password"
            android:textColorHint="@color/pophint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_pwd"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/login_edit"
            android:hint="@string/con_new_hint"
            android:inputType="textPassword"
            android:textColor="@color/password"
            android:textColorHint="@color/pophint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_medium_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/manage_option_cancel"
        android:gravity="center"
        android:text="@string/con_cpwd_btn"
        android:textColor="@color/manage_pay"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>