<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#66000000" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/back_to_pre"
            android:text="@string/back_txt"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/appoint_phone"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/medium_text_size" />

            <EditText
                android:id="@+id/reg_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/login_edit"
                android:hint="@string/hit_account"
                android:textColor="@color/editcolor"
                android:textColorHint="@color/pophint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/small_medium_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_code"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/medium_text_size" />

            <EditText
                android:id="@+id/id_code"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/login_edit"
                android:hint="@string/hit_code"
                android:textColor="@color/editcolor"
                android:textColorHint="@color/pophint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/small_medium_text_size" />

            <Button
                android:id="@+id/get_code_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="#324354"
                android:text="@string/get_code"
                android:textColor="@color/editcolor"
                android:textSize="@dimen/small_middle_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/login_pass"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/medium_text_size" />

            <EditText
                android:id="@+id/reg_pwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@color/login_edit"
                android:hint="@string/new_hint"
                android:inputType="textPassword"
                android:textColor="@color/editcolor"
                android:textColorHint="@color/pophint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/small_medium_text_size" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/forget_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/manage_option_cancel"
        android:gravity="center"
        android:text="@string/con_cpwd_btn"
        android:textColor="@color/manage_pay"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>