<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#66000000" >

        <TextView
            android:id="@+id/settings_back_to_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/back_to_pre"
            android:text="@string/back_txt"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/system_settings"
            android:textColor="@color/choosetextcolor"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/settings" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/message_push"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/medium_text_size" />

        <cn.com.sfn.juqi.widgets.SwitchButton
            android:id="@+id/notification_btn"
            style="@style/PersonalRightIconStyle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/about_us"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/about_us"
                android:textColor="@color/manage_pay"
                android:textSize="@dimen/medium_text_size" />

            <ImageView
                style="@style/PersonalRightIconStyle"
                android:contentDescription="@string/image_description"
                android:src="@drawable/next_page" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/help_center"
                android:textColor="@color/manage_pay"
                android:textSize="@dimen/medium_text_size" />

            <ImageView
                style="@style/PersonalRightIconStyle"
                android:contentDescription="@string/image_description"
                android:src="@drawable/next_page" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/settings" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/password_change"
            android:textColor="@color/manage_pay"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            style="@style/PersonalRightIconStyle"
            android:contentDescription="@string/image_description"
            android:src="@drawable/next_page" />
    </RelativeLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/manage_option_cancel"
        android:gravity="center"
        android:text="@string/logout_txt"
        android:textColor="@color/manage_pay"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>